--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ h2{
   color: darkred;
 }
 body {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
 }
 .countdown {
   color: white; 
